tests/failures/before_version.stderr
error: TODO b4 <0.1.0 not satisfied
 --> tests/failures/before_version.rs:4:5
  |
4 |     todo_by_version!("<0.1.0");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `todo_by_version` (in Nightly builds, run with -Z macro-backtrace for more info)
