tests/failures/before_version.rs
use todo_by::todo_by_version;

fn main() {
    todo_by_version!("<0.1.0");
    fn my_function() {}
}
